# gender-geometry

./: .gitignore  .polyscope.ini  README.md  analysis.ipynb  pyproject.toml  test.ipynb
paper/: sigbovik.tex  sources.bib
