[project]
name = "sigbovik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.11.12",
    "gpytoolbox>=0.3.3",
    "ipykernel>=6.29.5",
    "jax>=0.5.0",
    "libigl>=2.5.1",
    "matplotlib>=3.10.1",
    "pip>=25.0.1",
    "plotnine>=0.14.5",
    "polars>=1.24.0",
    "polyscope>=2.3.0",
    "scikit-learn>=1.6.1",
    "scikit-tda>=1.1.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
